--- a/.env
+++ b/.env
@@ -29,3 +29,14 @@ APP_SECRET=
 
 DATABASE_URL="mysql://root:@127.0.0.1:3306/pathway_plus?serverVersion=mariadb-10.4.28&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
