--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "ext-intl": "*"
     },
     "config": {
         "allow-plugins": {
