--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "babdev/pagerfanta-bundle": "^4.5",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.14",
@@ -46,8 +47,7 @@
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-intl": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
