--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     avatars_directory: '%kernel.project_dir%/public/uploads/avatars'
+    gemini_api_key: '%env(GEMINI_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
@@ -23,6 +24,13 @@ services:
         arguments:
             $apiUsername: '%env(CAREERS_API_USERNAME)%'
             $apiPassword: '%env(CAREERS_API_PASSWORD)%'
+
+    # Gemini AI Service configuration
+    App\Service\GeminiAiService:
+        arguments:
+            $apiKey: '%gemini_api_key%'
+        tags:
+            - { name: 'monolog.logger', channel: 'ai' }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
